# kapiloroskopi

./: .env  pyproject.toml  wsgi.py
kapiloroskopi/: __init__.py
kapiloroskopi/app/: forms.py
kapiloroskopi/blueprints/: dev_ground.py  main_menu.py
kapiloroskopi/templates/: layout.html  nav_top.html  navigation.html
kapiloroskopi/templates/menu/: dashboard.html  data.html
