[tool.poetry]
name = "kapiloroskopi"
version = "0.1.0"
description = ""
authors = ["Fikry C. Farenza <vickyfarenza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.3.56"
scikit-learn = "^1.6.0"
onnxruntime = "^1.20.1"
python-dotenv = "^1.0.1"
flask-wtf = "^1.2.2"
gunicorn = "^23.0.0"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
